# chainsight-sdk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check-examples.yml  qa.yml
chainsight-cdk/: Cargo.toml  README.md
chainsight-cdk-macros/: Cargo.toml  LICENSE  README.md
chainsight-cdk-macros/examples/: cross-canister-call.rs  timer-task-func.rs
chainsight-cdk-macros/examples/minimum/: Cargo.toml  README.md  dfx.json  launch_local.sh
chainsight-cdk-macros/examples/minimum_canisters/: Cargo.toml  README.md  dfx.json
chainsight-cdk-macros/examples/minimum_indexers/: Cargo.toml  README.md  dfx.json  launch_local.sh
chainsight-cdk-macros/examples/minimum_indexers/__interfaces/: IProposalManager.json  IProposalSynchronizer.json  Uint256Oracle.json
chainsight-cdk-macros/src/: functions.rs  indexers.rs  internal.rs  lib.rs  states.rs  storages.rs  utils.rs  web3.rs
chainsight-cdk-macros/src/canisters/: algorithm_indexer.rs  algorithm_lens.rs  attributes.rs  event_indexer.rs  mod.rs  relayer.rs  snapshot_indexer_evm.rs  snapshot_indexer_https.rs  snapshot_indexer_icp.rs  utils.rs
chainsight-cdk-macros/src/canisters/snapshots/: chainsight_cdk_macros__canisters__algorithm_indexer__test__snapshot__algorithm_indexer.snap  chainsight_cdk_macros__canisters__algorithm_lens__test__snapshot__algorithm_lens.snap  chainsight_cdk_macros__canisters__algorithm_lens__test__snapshot__algorithm_lens_with_args.snap  chainsight_cdk_macros__canisters__event_indexer__test__snapshot__event_indexer.snap  chainsight_cdk_macros__canisters__relayer__test__snapshot__relayer.snap  chainsight_cdk_macros__canisters__relayer__test__snapshot__relayer__with_converted_val_from_extracted.snap  chainsight_cdk_macros__canisters__relayer__test__snapshot__relayer__with_extracted_val_from_response.snap  chainsight_cdk_macros__canisters__relayer__test__snapshot__relayer__with_lens.snap  (+11 more)
chainsight-cdk-macros/src/indexer/: indexer.rs  mod.rs
chainsight-cdk-macros/src/indexers/: mod.rs  sources.rs
chainsight-cdk-macros/src/snapshots/: chainsight_cdk_macros__functions__test__snapshot__init_in_env.snap  chainsight_cdk_macros__functions__test__snapshot__init_in_env_with_stable_memory.snap  chainsight_cdk_macros__functions__test__snapshot__lens_method.snap  chainsight_cdk_macros__functions__test__snapshot__lens_method__with_args.snap  chainsight_cdk_macros__functions__test__snapshot__setup_func.snap  chainsight_cdk_macros__functions__test__snapshot__setup_func_with_stable_memory.snap  chainsight_cdk_macros__functions__test__snapshot__timer_task_func.snap  chainsight_cdk_macros__functions__test__snapshot__timer_task_func_with_stable_memory.snap  chainsight_cdk_macros__indexers__test__snapshot__algorithm_indexer.snap  chainsight_cdk_macros__indexers__test__snapshot__algorithm_indexer_witg_args.snap  chainsight_cdk_macros__indexers__test__snapshot__algorithm_lens_finder.snap  chainsight_cdk_macros__indexers__test__snapshot__web3_event_indexer.snap  chainsight_cdk_macros__states__test__snapshot__manage_map_state.snap  chainsight_cdk_macros__states__test__snapshot__manage_single_state.snap  chainsight_cdk_macros__states__test__snapshot__manage_vec_state.snap  chainsight_cdk_macros__storages__test__snapshot__generate_queries_for_key_value_store_struct_internal.snap  chainsight_cdk_macros__storages__test__snapshot__generate_queries_for_key_values_store_struct_internal.snap  chainsight_cdk_macros__storages__test__snapshot__key_value_store_derive.snap  chainsight_cdk_macros__storages__test__snapshot__key_values_store_derive.snap  chainsight_cdk_macros__storages__test__snapshot__prepare_stable_structure.snap  chainsight_cdk_macros__storages__test__snapshot__stable_memory_for_btree_map.snap  chainsight_cdk_macros__storages__test__snapshot__stable_memory_for_scalar.snap  chainsight_cdk_macros__storages__test__snapshot__stable_memory_for_vec.snap  chainsight_cdk_macros__utils__tests__snapshot__chainsight_common.snap  chainsight_cdk_macros__utils__tests__snapshot__define_logger.snap  chainsight_cdk_macros__utils__tests__snapshot__derive_cbor_serde.snap  chainsight_cdk_macros__utils__tests__snapshot__did_export.snap  chainsight_cdk_macros__web3__test__snapshot__define_get_ethereum_address.snap  chainsight_cdk_macros__web3__test__snapshot__define_transform_for_web3.snap  chainsight_cdk_macros__web3__test__snapshot__define_web3_ctx.snap  chainsight_cdk_macros__web3__test__snapshot__define_web3_ctx__with_stable_memory.snap  chainsight_cdk_macros__web3__test__snapshot__define_withdraw_balance.snap
chainsight-cdk-macros/tests/: function_init_in_env.rs  function_init_in_env_with_stable_memory.rs  function_setup.rs  function_setup_with_custom_struct.rs  function_setup_with_stable_memory.rs  function_timer_task_func.rs  function_timer_task_func_with_stable_memory.rs  sources_algorithm_indexer.rs  sources_event_indexer.rs  sources_relayer_with_lens.rs  sources_relayer_without_lens.rs  sources_snapshot_indexer_icp.rs  sources_snapshot_indexer_icp_with_lens.rs  sources_snapshot_indexer_web3.rs  states.rs  utils.rs  web3_define_web3_ctx.rs  web3_define_web3_ctx_with_stable_memory.rs
chainsight-cdk/src/: indexer.rs  lib.rs  transformer.rs  types.rs
chainsight-cdk/src/algorithm/: algorithm.rs  mod.rs
chainsight-cdk/src/config/: components.rs
chainsight-cdk/src/convert/: candid.rs  evm.rs  mod.rs  scalar.rs
chainsight-cdk/src/core/: env.rs  mod.rs  time.rs  types.rs
chainsight-cdk/src/indexer/: indexer.rs  mod.rs
chainsight-cdk/src/initializer/: chainsight_initializer.rs  initializer.rs  mod.rs
chainsight-cdk/src/lens/: lens.rs  mod.rs
chainsight-cdk/src/log/: logger.rs  mod.rs  types.rs
chainsight-cdk/src/metric/: types.rs
chainsight-cdk/src/oracle/: mod.rs
chainsight-cdk/src/rpc/: call_provider.rs  caller.rs  mod.rs  receive_provider.rs  receiver.rs
chainsight-cdk/src/storage/: mod.rs  storable.rs  storage.rs  token.rs
chainsight-cdk/src/time/: mod.rs
chainsight-cdk/src/web2/: mod.rs  processors.rs  web2.rs
chainsight-cdk/src/web3/: abi.rs  mod.rs  processors.rs  web3.rs  web3_indexer.rs
(+140 files in other folders)
