[workspace]
members = ["chainsight-cdk", "chainsight-cdk-macros"]

[workspace.dependencies]
anyhow = "1.0.75"
candid = { version = "0.9.6", features = ["parser"] }
ethabi = "18.0.0"
futures = "0.3.28"
hex = "0.4.3"
ic-cdk = "0.11.3"
ic-web3-rs = "0.1.6"
ic-solidity-bindgen = "0.1.14"
ic-stable-structures = "0.5.5"
regex = "1.8.4"
serde = "1.0.163"
serde_json = "1.0.107"
syn = "2.0.38"
