[workspace]
members = ["chainsight-cdk", "chainsight-cdk-macros"]

[workspace.dependencies]
anyhow = "1.0.75"
candid = "^0.10.4"
candid_parser = "^0.1.4"
ethabi = "18.0.0"
futures = "0.3.28"
hex = "0.4.3"
ic-cdk = "0.13.2"
ic-web3-rs = "0.1.9"
ic-solidity-bindgen = "0.1.18"
ic-stable-structures = "0.6.4"
regex = "1.8.4"
serde = "1.0.163"
serde_json = "1.0.107"
syn = "2.0.38"
