[package]
name = "chainsight-cdk-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.58"
quote = "1.0.27"
syn = "2.0.16"

candid = "0.8.4"
ic-cdk = "0.8.1"
ic-cdk-timers = "0.1.2"
ic-cdk-macros = "0.6.10"

serde = "1.0.163"

chainsight-cdk = { path = "../chainsight-cdk" }
ic-solidity-bindgen = "0.1.5"
darling = "0.20.1"
