[package]
name = "chainsight-cdk-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.58"
quote = "1.0.27"
syn = "2.0.16"

candid = "0.8.4"
ic-cdk = "0.8.1"
ic-cdk-timers = "0.1.2"
ic-cdk-macros = "0.6.10"

serde = "1.0.163"

chainsight-cdk = { path = "../chainsight-cdk" }
ic-solidity-bindgen = "0.1.8"
darling = "0.20.1"
serde_json = "1.0.107"
ethabi = "18.0.0"
Inflector = "0.11.4"
anyhow = "1.0.75"

[dev-dependencies]
insta = { version =  "1.34.0", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
