[package]
name = "chainsight-cdk-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
candid.workspace = true
ethabi.workspace = true
futures.workspace = true
hex.workspace = true
ic-cdk.workspace = true
ic-web3-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true

chainsight-cdk = { path = "../chainsight-cdk" }
darling = "0.20.1"
ic-cdk-timers = "0.1.2"
ic-cdk-macros = "0.6.10"
ic-solidity-bindgen = "0.1.8"
Inflector = "0.11.4"
proc-macro2 = "1.0.58"
quote = "1.0.27"

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }
rust-format = "0.3.4"
tokio = { version = "1.33.0", features = ["full"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
