[package]
name = "chainsight-cdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.68"
candid = "0.8"
combine-proc-macro = "0.3.1"
derive_more = "0.99.17"
ethabi = "18.0.0"
futures = "0.3.28"
hex = "0.4.3"
ic-cdk = "0.8.1"
ic-solidity-bindgen = "0.1.5"
ic-stable-memory = "0.4.4"
ic-stable-structures = "0.5.4"
ic-web3-rs = "0.1.1"
lazy_static = "1.4.0"
primitive-types = "0.12.1"
regex = "1.8.4"
serde = "1.0.163"
serde_json = "1.0.99"
syn = "2.0.38"
