[package]
name = "chainsight-cdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
candid.workspace = true
ethabi.workspace = true
futures.workspace = true
ic-cdk.workspace = true
ic-web3-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true

async-trait = "0.1.68"
combine-proc-macro = "0.3.1"
derive_more = "0.99.17"
hex = "0.4.3"
ic-solidity-bindgen = "0.1.7"
ic-stable-memory = "0.4.4"
ic-stable-structures = "0.5.4"
lazy_static = "1.4.0"
primitive-types = "0.12.1"
regex = "1.8.4"

[dev-dependencies]
insta = { version = "1.33.0", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
