[package]
name = "chainsight-cdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
candid.workspace = true
candid_parser.workspace = true
ethabi.workspace = true
futures.workspace = true
hex.workspace = true
ic-cdk.workspace = true
ic-web3-rs.workspace = true
ic-solidity-bindgen.workspace = true
ic-stable-structures.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true

async-trait = "0.1.68"
combine-proc-macro = "0.3.1"
derive_more = "0.99.17"
lazy_static = "1.4.0"
primitive-types = "0.12.1"
Inflector = "0.11.4"

[dev-dependencies]
insta = { version = "1.33.0", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
