[workspace]
members = [
    "src/example_state",
    "src/example_stable_memory",
]

[workspace.dependencies]
candid = "^0.9.6"
ic-cdk = "^0.11"
ic-cdk-macros = "^0.8"
ic-cdk-timers = "0.5.0"
ic-stable-structures = "0.5.5"
serde = "1.0.163"

chainsight-cdk = { path = "../../../chainsight-cdk" }
chainsight-cdk-macros = { path = "../.." }
