[workspace]
members = [
    "src/relayer",
    "src/relayer_with_lens",
    "src/relayer_with_lens_with_args",
    "src/event_indexer",
    "src/algorithm_indexer",
    "src/algorithm_indexer_with_args",
    "src/algorithm_lens",
    "src/snapshot_indexer_evm",
    "src/snapshot_indexer_https",
    "src/snapshot_indexer_https_with_query_func",
    "src/snapshot_indexer_icp",
    "src/snapshot_indexer_icp_with_lens",
    "src/snapshot_indexer_icp_with_lens_with_args",
]

[workspace.dependencies]
candid = "0.9.6"
ic-cdk = "0.11.3"
ic-cdk-macros = "0.8.1"
ic-cdk-timers = "0.5.0"
ic-stable-structures = "0.5.5"
serde = "1.0.163"
serde_bytes = "0.11.12"
hex = "0.4.3"

ic-web3-rs = "0.1.3"
ic-solidity-bindgen = "0.1.9"
chainsight-cdk = { path = "../../../chainsight-cdk" }
chainsight-cdk-macros = { path = "../.." }
