[workspace]
members = [
    "src/relayer",
    "src/relayer_with_lens",
    "src/relayer_with_lens_with_args",
    "src/event_indexer",
    "src/algorithm_indexer",
    "src/algorithm_indexer_with_args",
    "src/algorithm_lens",
    "src/snapshot_indexer_evm",
    "src/snapshot_indexer_https",
    "src/snapshot_indexer_https_with_query_func",
    "src/snapshot_indexer_icp",
    "src/snapshot_indexer_icp_with_lens",
    "src/snapshot_indexer_icp_with_lens_with_args",
]

[workspace.dependencies]
candid = "^0.10.4"
ciborium = "0.2.1"
ic-cdk = "0.13.2"
ic-cdk-macros = "0.13.2"
ic-cdk-timers = "0.7.0"
ic-stable-structures = "0.6.4"
serde = "1.0.163"
serde_bytes = "0.11.12"
hex = "0.4.3"

ic-web3-rs = { git = "https://github.com/horizonx-tech/ic-web3-rs.git", branch = "deps/ic-cdk-0.13.2" }
ic-solidity-bindgen = { git = "https://github.com/horizonx-tech/ic-solidity-bindgen.git", branch = "deps/ic-cdk-0.13.2" }
chainsight-cdk = { path = "../../../chainsight-cdk" }
chainsight-cdk-macros = { path = "../.." }
