[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ic-cdk = "0.8.1"
ic-cdk-macros = "0.6.10"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
serde = "1.0.163"
hex = "0.4.3"
chainsight-cdk-macros = { path = "../../../../" }
chainsight-cdk = { path = "../../../../../chainsight-cdk" }

ic-web3-rs = "0.1.1"
ic-solidity-bindgen = "0.1.5"
